# parametrize

./: .gitignore  LICENSE  Makefile  changelog.md  pyproject.toml  readme.md  setup.cfg
.github/workflows/: ci.yml
parametrize/: __init__.py  parametrize.py  utils.py
tests/: test_core.py  test_edge_cases.py  test_utils.py  test_with_unittest.py
tools/: get_changes.py
