
[project]
name = "parametrize"
description = "Drop-in @pytest.mark.parametrize replacement working with unittest.TestCase"
authors = [
    {name = "Bobronium", email = "write@bobronium.me"}
]
dynamic = ["version"]
license = {text = "MIT"}
requires-python = ">=3.6"
readme = "readme.md"
keywords = ["pytest", "parametrize", "unittest"]
homepage = "https://github.com/Bobronium/parametrize/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[tool.ruff]
target-version = "py37"  # technically it should be py36, but ruff doesn't support it
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]


[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"

[project.optional-dependencies]
typing = [
    "mypy==0.971",
]
test = [
    "pytest-cov>=2.11.1",
    "pytest-sugar>=0.9.4",
    "pytest-mock>=3.6.0"
]
lint = [
    "ruff",
]
dev = [
    "parametrize[lint,typing,test]"
]

[tool.setuptools.dynamic]
version = {vcs = "git", style = "semver"}

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
vcs = "git"
style = "semver"
